# egolifter

./: .gitignore  00_sam-example.ipynb  01_colab-demo.ipynb  02_sam2-example.ipynb  03_sam-gsa.ipynb  03_sam2-gsa.ipynb  04_sam2-gsa.ipynb  04_sam2-vos.ipynb  05_sam2-vos-hd.ipynb  07_decompose_training_setup.ipynb  08_new_contrast_model.ipynb  09_new_contrast_model.ipynb  0scratch.ipynb  0scrtach.ipynb  1colab-demo.ipynb  1scratch.ipynb  2colab.ipynb  3colab.ipynb  3scrtach.ipynb  4colab.ipynb  README.md  pyproject.toml  render_lightning.py  setup_env.bash.template  sync_filenames.sh  uv-readme.md
conf/: train.yaml
conf/model/: vanilla_contrast_v3.yaml
experiments/: exp1_contrast_tweak_seq131.ipynb
gaussian_renderer/: gsplat.py
model/: __init__.py  unc_2d_unet.py  vanilla.py  vanilla_constrast_v3.py
scene/: __init__.py  gaussian_mlp_model.py  gaussian_model.py
scripts/: download_process_adt.bash  generate_gsa_results.py
utils/: contrastive.py  contrastive_v2.py  contrastive_v3.py  contrastive_v4.py  vos_inference.py
