[project]
name = "egolifter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip",
    "distinctipy>=1.3.4",
    "fsspec>=2025.3.2",
    "gsplat>=1.5.0",
    "hdbscan>=0.8.40",
    "hydra-core>=1.3.2",
    "imageio[ffmpeg]>=2.37.0",
    "lightning[pytorch-extra]>=2.5.1",
    "moviepy>=2.1.2",
    "natsort>=8.4.0",
    "open-clip-torch>=2.32.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1",
    "pretrained-backbones-unet>=0.0.1",
    "projectaria-tools[all]>=1.5.7",
    "splines>=0.3.2",
    "tdqm>=0.0.1",
    "torch>=2.4.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.18",
    "viser>=0.2.23",
    "vrs>=1.2.1",
    "wandb>=0.19.9",
]

[[tool.uv.index]]
name = "gsplat"
url = "https://docs.gsplat.studio/whl/pt24cu121"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
gsplat = { index = "gsplat" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
